--- a/Online Book-Store/appsettings.json
+++ b/Online Book-Store/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=PC-12\\SQLEXPRESS;Integrated Security=True;Encrypt=True;Trust Server Certificate=True; Database = Online Book-Store"
+    "DefaultConnection": "Data Source=DESKTOP-26A9125;Integrated Security=True;Encrypt=True;Trust Server Certificate=True; Database = Online Book-Store"
   }
 }
